# dapla-shared-data-processor-build-scripts

./: .gitignore  README.md  backstage.yaml  build.mill  build.mill.scala  flake.nix  flake8conf  process_shared_data.py  requirements.txt  run_tests.sh  version.yaml
schema-validation/: config_schema.yaml  config_schema_spec.yaml  process_shared_data.py  pyproject.toml
schema-validation/src/: configUtils.scala  generateCode.scala  types.scala  utils.scala  validateConfig.scala  validate_config.py
schema-validation/src/delomaten_schema_validation/: __init__.py  validate_config.py
schema-validation/test/: generateCode.scala  main.py  validateConfig.scala
schema-validation/test/data/golden/: process_shared_data1.py  process_shared_data2.py  valid_config1.yaml  valid_config2.yaml
schema-validation/test/data/programatic-validation/: invalid_depseudo_operations.yaml  invalid_output_columns.yaml  invalid_pseudo_task_columns.yaml  invalid_schema.yaml  invalid_shared_buckets.yaml  valid_config1.yaml  valid_config2.yaml  (+1 more)
schema-validation/test/schema-test-data/: invalid_data4.yaml  invalid_pseudo_tasks.yaml  valid_data1.yaml  valid_data2.yaml
schema-validation/test/test_data/: invalid_data2.yaml  invalid_data4.yaml  invalid_data5.yaml  valid_data.yaml  valid_data2.yaml
schema-validation/test/validation-test-data/: buckets-shared.yaml  invalid_output_columns.yaml  invalid_pseudo_task_columns.yaml  invalid_schema.yaml  invalid_shared_buckets.yaml
scripts/: pyproject.toml
scripts/test/test_data/: invalid_data1.yaml  invalid_data3.yaml  valid_data.yaml
(+33 files in other folders)
