[project]
name = "delomaten-schema-validation"
version = "0.1.0"
description = "Tests the user configuration for pseudonymizing data to be shared across teams"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asdf>=4.0.0",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "rich>=13.9.4",
    "types-pyyaml>=6.0.12.20241230",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asdf_schema_root = "./config_schema.yaml"
asdf_schema_tests_enabled = "true"
